TP05-Ingress/deploy_nginx2.yml
kind: Service
apiVersion: v1
metadata:
  name: svc-nginx2
spec:
  type: LoadBalancer
  selector:
    app: nginx2
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          readOnly: true
          name: index-html
      volumes:
      - name: index-html
        configMap:
          name: index-html2
          items:
            - key: index.html
              path: index.html
