TP05-Ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8straining.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: svc-nginx
          servicePort: 80
      - path: /bar
        backend:
          serviceName: svc-nginx2
          servicePort: 80
